<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#ca9852">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/coffeepb100px"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:paddingLeft="3dp"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:paddingLeft="3dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:paddingLeft="3dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/confirm_password"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#D0CCC8"
        android:textColor="#000000"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"
            android:textColor="#ffffff"/>
        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/login"
            android:textColor="#D0CCC8"/>

    </LinearLayout>
</LinearLayout>
