<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".NewActivity"
    android:background="#FFC107">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:textColor="#000000"
        android:text="@string/coffeeBeanBitle"
        android:drawableLeft="@drawable/coffeepb30px"/>

    <EditText
        android:id="@+id/edittext_graocafe"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:paddingLeft="3dp"
        android:hint="@string/coffeeBean"/>

<!--        <TextView-->
<!--            android:id="@+id/textView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Processo" />-->

<!--        <RadioGroup-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content">-->

<!--            <RadioButton-->
<!--                android:id="@+id/radio_filtrodepano"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Filtro de Pano"-->
<!--                android:onClick="checkButton()"-->
<!--                />-->
<!--            <RadioButton-->
<!--                android:id="@+id/radio_prensafrancesa"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Prensa Francesa"-->
<!--                android:onClick="checkButton()"-->
<!--                />-->
<!--            <RadioButton-->
<!--                android:id="@+id/radio_coadorpapel"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Coador de Papel"-->
<!--                android:onClick="checkButton"/>-->
<!--        </RadioGroup>-->

        <Button
            android:id="@+id/button_cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
<<<<<<< HEAD
            android:onClick="register"/>
=======
            />
>>>>>>> 904fbaa6e2f33fcb2a6b91caed8fa0365ad7785d



</LinearLayout>